--- a/src/app/needs/needs.component.css
+++ b/src/app/needs/needs.component.css
@@ -7,12 +7,16 @@ p {
     color: #2c3e50;
     text-align: center;
     padding: 40px 20px 30px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .btn-danger {
     background-color: #FF8C7C;
     border-color: #FF8C7C;
+}
+
+.need-wrapper {
+    padding-top: 25px;
 }
 
 /*most phones landscape mode*/
